--- a/AC3.2-NYTTopStories/Base.lproj/Main.storyboard
+++ b/AC3.2-NYTTopStories/Base.lproj/Main.storyboard
@@ -18,9 +18,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="2Mc-dK-Tru">
+                            <rect key="frame" x="0.0" y="64" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="uLA-xy-6l6" id="JxB-eX-dBN"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="articleCell" rowHeight="190" id="QkA-8f-VHL" customClass="ArticleTableViewCell" customModule="AC3_2_NYTTopStories" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="190"/>
+                                <rect key="frame" x="0.0" y="72" width="375" height="190"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QkA-8f-VHL" id="hQO-gs-CzB">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="189"/>
@@ -70,18 +78,8 @@
                             <outlet property="delegate" destination="uLA-xy-6l6" id="QHa-Lg-cXA"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="TLs-j1-kI0">
+                    <navigationItem key="navigationItem" id="AhV-sF-cGY">
                         <nil key="title"/>
-                        <textField key="titleView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="kvL-bc-PFh">
-                            <rect key="frame" x="113" y="7" width="150" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <nil key="textColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
-                            <connections>
-                                <outlet property="delegate" destination="uLA-xy-6l6" id="9qD-Cu-MR9"/>
-                            </connections>
-                        </textField>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f7J-8i-cFK" userLabel="First Responder" sceneMemberID="firstResponder"/>
